# huawei2019

./: .gitignore  README.md  build_and_run.sh  run.sh
CodeCraft-2019/: CMakeLists.txt  Car.cpp  CodeCraft-2019.cpp  Cross.cpp  Road.cpp  common.cpp  optimize.cpp
CodeCraft-2019/include/: Car.h  Cross.h  Road.h  common.h  optimize.h
config_11/: answer.txt
config_12/: answer.txt
config_13/: answer.txt
config_14/: answer.txt
cs/: Car.cpp  CodeCraft-2019.cpp  Cross.cpp  Road.cpp  common.cpp  optimize.cpp
cs/cs/: CMakeLists.txt  Car.cpp  CodeCraft-2019.cpp  Cross.cpp  Road.cpp  common.cpp  optimize.cpp
cs/cs/include/: Car.h  Cross.h  Road.h  common.h  optimize.h
cs/include/: Car.h  Cross.h  common.h  optimize.h
zhao/: Car.cpp  CodeCraft-2019.cpp  Cross.cpp  Road.cpp  common.cpp
zhao/include/: Car.h  Cross.h  Road.h
